--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,13 @@ body {
   font-family: 'Source Sans Pro', Arial, sans-serif;
 }
 
-body::-webkit-scrollbar{
-  width: 8px; 
+body::-webkit-scrollbar {
+  width: 8px;
 }
 
-body::-webkit-scrollbar-thumb{
+body::-webkit-scrollbar-thumb {
   background-color: #44444454;
-  border-radius: 4px; 
+  border-radius: 4px;
 }
 
 .container {
@@ -62,12 +62,23 @@ body::-webkit-scrollbar-thumb{
 
 .header {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
   height: 70px;
   background-color: #0b2c48;
   padding: 0 20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
+.BigHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .logo img {
@@ -85,7 +96,6 @@ body::-webkit-scrollbar-thumb{
 .nav-menu ul li {
   margin: 0 15px;
   position: relative;
-  left: 20px;
 }
 
 .nav-menu ul li a {
@@ -97,56 +107,14 @@ body::-webkit-scrollbar-thumb{
   display: block;
 }
 
-.dropDown {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background-color: white;
-  border-radius: 5px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  padding: 10px;
-  min-width: 180px;
-  opacity: 0;
-  transform: translateY(10px);
-  transition: opacity 0.3s ease, transform 0.3s ease;
-}
-
-.dropDown ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.dropDown ul li {
-  margin: 5px 0;
-}
-
-.dropDown ul li a {
-  color: black;
-  font-size: 14px;
-  display: block;
-  padding: 5px 10px;
-}
-
-.dropDown ul li a:hover {
-  background-color: #f0f0f0;
-  border-radius: 3px;
-}
-
-.nav-menu ul li:hover .dropDown {
-  display: block;
-  opacity: 1;
-  transform: translateY(0);
-}
-
 .header-right {
   display: flex;
+  align-items: center;
+  gap: 15px;
 }
 
 .header-right img {
   width: 25px;
-  margin: 0 10px;
 }
 
 .switch-lang {
@@ -181,6 +149,7 @@ body::-webkit-scrollbar-thumb{
   z-index: 999;
   font-size: 20px;
 }
+
 #sidebar {
   display: none;
 }
@@ -203,9 +172,10 @@ body::-webkit-scrollbar-thumb{
   display: none;
 }
 @media only screen and (max-width: 800px) {
-  .nav-menu ul li {
+  .header .nav-menu ul li a {
     display: none;
   }
+
   #MenuIcom {
     width: 40px;
     height: 40px;
@@ -220,6 +190,9 @@ body::-webkit-scrollbar-thumb{
     position: relative;
     left: -20px;
   }
+  .header-right {
+    display: none;
+  }
 }
 /* Footer */
 .footer {
@@ -230,7 +203,7 @@ body::-webkit-scrollbar-thumb{
   padding-bottom: 20px;
 }
 
-.footer-info{
+.footer-info {
   display: flex;
   text-align: center;
   justify-content: center;
@@ -264,15 +237,15 @@ body::-webkit-scrollbar-thumb{
   padding: 0 10px;
 }
 
-.footer-contact{
+.footer-contact {
   display: flex;
 }
 
-.footer-contact div{
+.footer-contact div {
   margin-left: 20px;
 }
 
-.informations{
+.informations {
   display: flex;
 }
 
@@ -298,157 +271,156 @@ body::-webkit-scrollbar-thumb{
   font-weight: 400;
   text-align: left;
 }
-header{
+header {
   display: none;
 }
 
-
-@media only screen and (min-width: 1200px) and (max-width:1400px) {
+@media only screen and (min-width: 1200px) and (max-width: 1400px) {
   .container {
     max-width: 1200px;
   }
-  
-  .circular-progress{    
+
+  .circular-progress {
     margin-top: -30px;
   }
 }
 
-@media only screen and (min-width:992px) and (max-width:1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
   .container {
     max-width: 992px;
     width: 95%;
   }
-  .footer-contact{
+  .footer-contact {
     display: flex;
     width: 90%;
     height: 100%;
   }
-  .footer-contact div{
+  .footer-contact div {
     margin-left: 10px;
   }
-  .sections{
+  .sections {
     margin-left: 10px;
   }
-  .footer-btn{
+  .footer-btn {
     width: 220px;
   }
 }
 
-@media only screen and (min-width:768px) and (max-width:992px) {
+@media only screen and (min-width: 768px) and (max-width: 992px) {
   .container {
     max-width: 768px;
     width: 90%;
     padding: 10px;
   }
-  .footer-brand{
+  .footer-brand {
     display: none;
   }
-  .footer-contact{
+  .footer-contact {
     display: flex;
     width: 100%;
   }
 
-  .footer-contact div{
+  .footer-contact div {
     width: 100%;
   }
-  .informations{
+  .informations {
     display: block;
   }
-  .informations div{
+  .informations div {
     width: 100%;
-    margin-top: 15px;    
+    margin-top: 15px;
     text-align: left;
   }
-  .sections h2{
+  .sections h2 {
     font-size: 2rem;
     line-height: 37px;
     text-align: left;
   }
-  .sections a{
+  .sections a {
     font-size: 1.9rem;
     line-height: 37px;
     text-align: left;
   }
 }
 
-@media only screen and (min-width:576px) and (max-width:768px) {
+@media only screen and (min-width: 576px) and (max-width: 768px) {
   .container {
     max-width: 576px;
     width: 85%;
     padding: 8px;
   }
-  
-  .footer-brand{
+
+  .footer-brand {
     display: none;
   }
-  .footer-contact{
+  .footer-contact {
     display: flex;
     width: 100%;
   }
 
-  .footer-contact div{
+  .footer-contact div {
     width: 100%;
   }
-  .informations{
+  .informations {
     display: block;
     width: 50%;
   }
-  .informations div{
+  .informations div {
     width: 100%;
-    margin-top: 35px;    
+    margin-top: 35px;
     text-align: left;
   }
-  .sections{
+  .sections {
     width: 100%;
   }
-  .sections h2{
+  .sections h2 {
     font-size: 1.8rem;
     line-height: 35px;
     text-align: left;
   }
-  .sections a{
+  .sections a {
     font-size: 1.7rem;
     line-height: 35px;
     text-align: left;
-  }  
+  }
 }
 
-@media only screen and (max-width:576px) {
+@media only screen and (max-width: 576px) {
   .container {
     max-width: 568px;
     width: 75%;
     padding: 6px;
   }
-  .footer-info{
+  .footer-info {
     width: 100%;
     margin: 0 auto;
     text-align: left;
     justify-content: left;
   }
-  .footer-brand{
+  .footer-brand {
     display: none;
   }
-  .footer-contact{
+  .footer-contact {
     display: block;
     text-align: center;
     width: 70%;
   }
-  .informations{
+  .informations {
     display: block;
   }
-  .informations div{
+  .informations div {
     width: 100%;
     margin-top: 20px;
   }
 
-  .sections{
+  .sections {
     margin-top: 10px;
   }
-  .sections h2{
+  .sections h2 {
     font-size: 1.8rem;
     width: 100%;
   }
-  .sections a{
+  .sections a {
     font-size: 1.5rem;
     width: 100%;
   }
